feat(app): added things to chagne or keep the same
